[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Button Get" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 497.0
margin_top = 149.0
margin_right = 579.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Button Get"
flat = false
align = 1

[node name="HttpGet" type="HTTPRequest" parent="." index="1"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

[node name="Button Post" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_top = 202.0
margin_right = 581.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Button Post"
flat = false
align = 1

[node name="HttpPost" type="HTTPRequest" parent="." index="3"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

[connection signal="pressed" from="Button Get" to="." method="_on_Button_Get_pressed"]

[connection signal="request_completed" from="HttpGet" to="." method="_on_HttpGet_request_completed"]

[connection signal="pressed" from="Button Post" to="." method="_on_Button_Post_pressed"]

[connection signal="request_completed" from="HttpPost" to="." method="_on_HttpPost_request_completed"]


